--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-# Ignore data files
-data/
-
 # Ignore Jupyter Notebook checkpoints
 .ipynb_checkpoints/
 
 # Ignore Python cache
 __pycache__/
 
-# Ignore virtual environment
+# Ignore virtual environment.
 venv/
